@@ -22,7 +22,7 @@
      for="zope.site.interfaces.IRootFolder"
      />
 
-  <!-- views on address book -->
+  <!-- person list -->
   <gocept:pagelet
      name="index.html"
      for="...interfaces.IAddressBook"
@@ -31,6 +31,16 @@
      class=".list.PersonList"
      template="overview.pt"
      />
+
+  <adapter
+      for="icemac.addressbook.interfaces.IAddressBook
+           icemac.addressbook.browser.interfaces.IAddressBookLayer
+           z3c.table.interfaces.ITable
+           z3c.table.interfaces.IColumn"
+     provides="z3c.table.interfaces.IColumnHeader"
+     factory="z3c.table.header.SortingColumnHeader"
+     />
+
 
   <browser:defaultView
      name="index.html"
