@@ -5,6 +5,9 @@ Change log
 1.3.1 (unreleased)
 ==================
 
+- Added user preferences to customize the columns displayed in person
+  list.
+
 - Using `Zope Toolkit 1.0a2`_ instead of managing our own versions of
   dependent packages.
 
